<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="@color/screenshot_info_background_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screenshot_info_title"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:typeface="sans"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/date_time_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#a6a6a6"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/device_title"
        style="@style/ScreenshotInfoSubHeading"/>

    <TextView
        android:id="@+id/device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        style="@style/ScreenshotInfoText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/code_name_title"
        style="@style/ScreenshotInfoSubHeading"/>

    <TextView
        android:id="@+id/code_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        style="@style/ScreenshotInfoText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/build_title"
        style="@style/ScreenshotInfoSubHeading"/>

    <TextView
        android:id="@+id/build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        style="@style/ScreenshotInfoText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/screen_density_title"
        style="@style/ScreenshotInfoSubHeading"/>

    <TextView
        android:id="@+id/density"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        style="@style/ScreenshotInfoText"/>

    <TextView
        android:id="@+id/kernel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="12sp"
        android:textColor="#a6a6a6"/>

</LinearLayout>