<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_grid"
        android:shortcutId="grid_overlay"
        android:shortcutShortLabel="@string/header_title_grid_overlay">

        <intent
            android:action="com.scheffsblend.designertools.action.SHOW_GRID_OVERLAY"
            android:targetClass="com.digitex.designertools.ui.AppShortcutsActivity"
            android:targetPackage="com.scheffsblend.designertools"/>

    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_mock"
        android:shortcutId="mock_overlay"
        android:shortcutShortLabel="@string/header_title_mockup_overlay">

        <intent
            android:action="com.scheffsblend.designertools.action.SHOW_MOCK_OVERLAY"
            android:targetClass="com.digitex.designertools.ui.AppShortcutsActivity"
            android:targetPackage="com.scheffsblend.designertools"/>

    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_colorpicker"
        android:shortcutId="color_picker"
        android:shortcutShortLabel="@string/header_title_color_picker">

        <intent
            android:action="com.scheffsblend.designertools.action.SHOW_COLOR_PICKER_OVERLAY"
            android:targetClass="com.digitex.designertools.ui.AppShortcutsActivity"
            android:targetPackage="com.scheffsblend.designertools"/>

    </shortcut>

</shortcuts>