<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:text="@string/line_colors"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.digitex.designertools.widget.DualColorPicker
        android:id="@+id/color_picker"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:primaryColor="@color/colorPrimary"
        tools:secondaryColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/include_keylines"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/include_keylines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:text="@string/include_custom_grid_size"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <CheckBox
        android:id="@+id/include_custom_grid_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <com.digitex.designertools.widget.VerticalSeekBar
        android:id="@+id/row_sizer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:max="10"
        app:layout_constraintBottom_toBottomOf="@+id/grid_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.digitex.designertools.widget.GridPreview
        android:id="@+id/grid_preview"
        android:layout_width="@dimen/grid_preview_width"
        android:layout_height="@dimen/grid_preview_height"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/row_sizer"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <SeekBar
        android:id="@+id/column_sizer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:max="10"
        app:layout_constraintEnd_toEndOf="@+id/grid_preview"
        app:layout_constraintStart_toStartOf="@+id/grid_preview"
        app:layout_constraintTop_toBottomOf="@+id/grid_preview" />

</androidx.constraintlayout.widget.ConstraintLayout>