<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme.Card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.Card.Grid">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">

        <include layout="@layout/card_header" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/line_colors"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_end" />

        <com.digitex.designertools.widget.DualColorPicker
            android:id="@+id/colorPicker"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/include_keylines"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <CheckBox
            android:id="@+id/keylinesCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:useMaterialThemeColors="false" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="@string/include_custom_grid_size"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <CheckBox
            android:id="@+id/customGridSizeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView5"
            app:useMaterialThemeColors="false" />

        <com.digitex.designertools.widget.VerticalSeekBar
            android:id="@+id/rowSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:max="10"
            app:layout_constraintBottom_toBottomOf="@+id/gridPreview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <com.digitex.designertools.widget.GridPreview
            android:id="@+id/gridPreview"
            android:layout_width="@dimen/grid_preview_width"
            android:layout_height="@dimen/grid_preview_height"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/rowSeekBar"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <SeekBar
            android:id="@+id/columnSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:max="10"
            app:layout_constraintEnd_toEndOf="@+id/gridPreview"
            app:layout_constraintStart_toStartOf="@+id/gridPreview"
            app:layout_constraintTop_toBottomOf="@+id/gridPreview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>